src/test/ui/or-patterns/exhaustiveness-unreachable-pattern.stderr
error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:9:9
   |
LL |         (1,) => {}
   |         ^^^^
   |
note: lint level defined here
  --> $DIR/exhaustiveness-unreachable-pattern.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:14:9
   |
LL |         (2,) => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:20:9
   |
LL |         (1 | 2,) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:25:9
   |
LL |         (1, 3) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:26:9
   |
LL |         (1, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:27:9
   |
LL |         (2, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:28:9
   |
LL |         (2 | 1, 4) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:30:9
   |
LL |         (1, 4 | 5) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:35:9
   |
LL |         (Some(1),) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:36:9
   |
LL |         (None,) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:41:9
   |
LL |         ((1..=4,),) => {}
   |         ^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:47:12
   |
LL |          | 1,) => {}
   |            ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:54:15
   |
LL |             | 0] => {}
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:52:15
   |
LL |             | 0
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:62:10
   |
LL |         [1
   |          ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:68:14
   |
LL |         Some(0
   |              ^

error: aborting due to 16 previous errors

